syntax = "proto3";

package url;

option go_package = "./pkg/pb";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";
import "google/api/annotations.proto ";


service TodoService {
    rpc CreateTodo(CreateTodoRequest) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            post: " /api/todo-list/tasks"
            body: "*"
        };
    };
    rpc UpdateTodo(UpdateTodoRequest) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/api/todo-list/tasks/{id}"
            body: "*"
        };
    };
    rpc DeleteTodo(DeleteTodoRequest) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            delete: "/api/todo-list/tasks/{id}" 
        };
    };
    rpc UpdateAsDone(UpdateAsDoneRequest) returns(google.protobuf.Empty) {
        option (google.api.http) = {
            put: "/api/todo-list/tasks/{id}/done "
            body: "title"
        };
    };
    rpc ListTodos(ListTodosRequest) returns(ListTodosResponse) {
        option (google.api.http) = {
            get: "/api/todo-list/tasks"
        };
    }
}

message CreateTodoRequest {
    string title = 1;
    google.protobuf.Timestamp active_at = 2;
}


message UpdateTodoRequest {
    string id = 1;
    string title = 2;
    google.protobuf.Timestamp active_at = 3;
}

message DeleteTodoRequest {
    string id = 1;
}

message UpdateAsDoneRequest {
    string id = 1;
}

// updated
message ListTodosRequest {
    string status = 1;
}

message ListTodosResponse {
    repeated Todo todos = 1;
}

message Todo {
    string id = 1;
    string title = 2;
    google.protobuf.Timestamp active_at = 3;
    string status = 4;
}

